FIX bug where only part of the screen is visible (i.e. on phone)

--- a/application/frontend/src/pages/Search/search.scss
+++ b/application/frontend/src/pages/Search/search.scss
@@ -1,6 +1,4 @@
 .search-page {
-  width: 100vw;
-  height: 100vh;
   background-color: #242e4c;
   display: flex;
   align-items: center;
